--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -6,3 +6,52 @@
 body {
   background-color: #202020;
 }
+
+header{
+  margin-top: 0;
+  background-color: #818181;
+  padding: 10px;
+  margin-bottom: 30px;
+}
+
+.content {
+  width: 100vw;
+  height: 100vh;
+  padding: 1rem;
+  background-color: #818181;
+}
+
+h1{
+  text-align: center;
+  font-size: 50px;
+  color: #91001f;
+  margin: 0;
+}
+
+footer{
+  background-color: #818181;
+  display: flex;
+  flex-direction: row;
+  justify-content: end;
+  padding: 5px 100px;
+  margin-top: 30px;
+}
+
+.socials a img{
+  margin-top: 12px;
+  width: 30px;
+  margin-right: 10px;
+}
+
+.made-by{
+  margin-left: 30px;
+}
+
+@media screen and (min-width: 992px) {
+  .content {
+    max-width: 992px;
+    height: auto;
+    margin: 1rem auto;
+    border-radius: 1rem;
+  }
+}
